cd/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: yoko-spring-boot-docker
  namespace: default
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: yoko-spring-boot-docker
